--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "firebase-admin": "^9.11.1"
+  },
+  "devDependencies": {
+    "typescript": "^4.4.2"
   }
 }
