--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Willian Yuiti",
+  "type": "commonjs",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
     "firebase-admin": "^9.11.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "ts-node": "^10.2.1",
     "typescript": "^4.4.2"
   }
 }
