--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Experiments with gcp",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev:server": "ts-node-dev --respawn --transpile-only src/Index.ts"
   },
   "author": "Willian Yuiti",
   "type": "commonjs",
@@ -16,6 +17,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "ts-node": "^10.2.1",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.2"
   }
 }
